--- a/Spring/src/main/resources/application.properties
+++ b/Spring/src/main/resources/application.properties
@@ -1,1 +1,2 @@
-
+spring.data.mongodb.uri=mongodb+srv://yimanliu:yimanliu@cluster.eya5x.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+spring.data.mongodb.database=storyline
